kubernetes-v2/personal/applications/archivebox/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: archivebox
  namespace: archivebox

spec:
  selector:
    matchLabels:
      app: archivebox
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      containers:
        - name: wireguard
          image: linuxserver/wireguard:1.0.20250521
          volumeMounts:
            - name: wg-conf
              mountPath: /etc/wireguard/
              readOnly: true
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
        - name: archivebox
          image: archivebox/archivebox:0.7
          args: ["server", "--quick-init", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /data
              name: archivebox
      restartPolicy: Always
      volumes:
        - name: wg-conf
          secret:
            secretName: wireguard
        - name: archivebox
          persistentVolumeClaim:
            claimName: archivebox
