kubernetes-v2/personal/applications/archivebox/service.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: archivebox
  namespace: archivebox

spec:
  # type: LoadBalancer
  selector:
    app: archivebox
  ports:
    - name: http
      port: 8000
