kubernetes-v2/personal/applications/archivebox/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: archivebox-http
  namespace: archivebox

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`archivebox.agrrh.com`)
      middlewares:
        - name: whitelist
          namespace: kube-system
      services:
        - kind: Service
          name: archivebox
          namespace: archivebox
          port: 80
